@@ -5635,9 +5635,6 @@ public final class StaticCompilationTests extends GroovyCompilerTestSuite {
 
     @Test
     public void testCompileStatic9635() {
-        if (Float.parseFloat(System.getProperty("java.specification.version")) > 8)
-            vmArguments = new String[] {"--add-opens", "java.base/java.util.function=ALL-UNNAMED"};
-
         //@formatter:off
         String[] sources = {
             "Main.groovy",
@@ -6058,9 +6055,6 @@ public final class StaticCompilationTests extends GroovyCompilerTestSuite {
 
     @Test
     public void testCompileStatic9881() {
-        if (Float.parseFloat(System.getProperty("java.specification.version")) > 8)
-            vmArguments = new String[] {"--add-opens", "java.base/java.util.function=ALL-UNNAMED"};
-
         //@formatter:off
         String[] sources = {
             "Main.groovy",
